@@ -177,6 +177,9 @@ Library
 
 - Issue #16628: Fix a memory leak in ctypes.resize().
 
+- Issue #13614: Fix setup.py register failure with invalid rst in description.
+  Patch by Julien Courteau and Pierre Paul Lefebvre.
+
 - Issue #13512: Create ~/.pypirc securely (CVE-2011-4944).  Initial patch by
   Philip Jenvey, tested by Mageia and Debian.
 
